# grcnn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_env.sh  package.xml  preprocess.txt  setup.py
config/: ir_camera.yaml
launch/: grasp_planner.launch  test.launch
msg/: GraspCandidate.msg  Rgbd.msg
nodes/: grcnn_server.py  provider.py
scripts/: line.ipynb  processor.py  provider.py  rgb.npy  rgb2.npy
src/: gr_convnet.py  grasp.py  segmentation.py  type.py  utils.py
srv/: GetGraspGlobal.srv  GetGraspLocal.srv  PredictGrasp.srv  PredictGrasps.srv  PredictGraspsWithSeg.srv
tests/: depth.ipynb  depth_fixed.npy  depth_raw.npy  line.ipynb  q_img.npy  q_img_scaled.npy  rgb_raw.npy
