<?xml version="1.0"?>
<package format="2">
  <name>grcnn</name>
  <version>1.0.0</version>
  <description>The grcnn package</description>
  <maintainer email="yangzhuo@todo.todo">yangzhuo</maintainer>
  <license>TODO</license>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
